# ews-cpp

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  Jenkinsfile  NOTICE  README  README.md  README.rst  TODO  annotated.html  classes.html  classews_1_1absolute__monthly__recurrence-members.html  classews_1_1absolute__monthly__recurrence.html  classews_1_1absolute__yearly__recurrence-members.html  classews_1_1absolute__yearly__recurrence.html  classews_1_1and__-members.html  classews_1_1and__.html  classews_1_1assertion__error-members.html  classews_1_1assertion__error.html  classews_1_1attachment-members.html  classews_1_1attachment.html  classews_1_1attachment__id-members.html  classews_1_1attachment__id.html  classews_1_1attendee-members.html  classews_1_1attendee.html  classews_1_1basic__credentials-members.html  classews_1_1basic__credentials.html  classews_1_1basic__service-members.html  classews_1_1basic__service.html  classews_1_1body-members.html  classews_1_1body.html  classews_1_1calendar__item-members.html  (+199 more)
.travis/: build-win.bat  build.sh  init-vcpkg.bat  start-win.bat
cmake/: macos-brewed-clang.txt
examples/: add_delegate.cpp  autodiscover.cpp  create_calendar_item_with_delegate_access.cpp  create_contact.cpp  create_folder.cpp  create_task.cpp  create_task_with_delegate_access.cpp  create_task_with_impersonation.cpp  delegate_access.cpp  delete_folder.cpp  find_calendar_items.cpp  find_folder.cpp  find_messages.cpp  find_new_messages.cpp  find_tasks.cpp  find_unread_messages.cpp  get_calendar_items.cpp  get_delegate.cpp  get_delegates.cpp  get_folder.cpp  get_meeting_room_calendar.cpp  get_rooms.cpp  move_folder.cpp  move_item.cpp  office365.cpp  office365_oauth2.cpp  office365_oauth2_cc.cpp  office365_oauth2_ropc.cpp  paging_view.cpp  raw_soap_request.cpp  remove_delegate.cpp  resolve_names.cpp  save_attachment.cpp  send_message.cpp  subscribe.cpp  sync_folder_hierarchy.cpp  sync_folder_items.cpp  update_contact.cpp  update_extended_property.cpp  update_folder.cpp
include/ews/: assert.hpp  curl.hpp  ews.hpp  ews_fwd.hpp  ews_test_support.hpp  plumbing.hpp  porcelain.hpp
include/ews/json/: json_stringview.hpp
include/ews/rapidjson/: document.h
include/ews/rapidxml/: rapidxml.hpp  rapidxml_iterators.hpp  rapidxml_print.hpp  rapidxml_utils.hpp
misc/: README.md  requirements.txt  scrape_response_codes.py  scrape_response_codes_from_msdn.py
scripts/: build-curl.bat
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  (+54 more)
tests/: boost-filesystem-wrapper.hpp  fixture.hpp  fixtures.hpp  gtest-wrapper.hpp  main.cpp  test_attachments.cpp  test_autodiscover.cpp  test_calendar_items.cpp  test_constants.cpp  test_contacts.cpp  test_debug_callback.cpp  test_folders.cpp  test_fu.cpp  test_internal.cpp  test_internals.cpp  test_item_id.cpp  test_items.cpp  test_messages.cpp  test_proxy.cpp  test_resolve_names.cpp  test_restrictions.cpp  test_service.cpp  test_subscribe.cpp  test_tasks.cpp  test_timeout.cpp
tests/assets/: autodiscover_response.xml  autodiscover_response_error.xml  bogus_server.py  get_attachment_response.xml  get_attachment_response_item.xml  get_item_response_message.xml  resolve_names_error.xml  resolve_names_response.xml  subscribe_response.xml  undeliverable_test_mail_get_item_response.xml  wait_server.py
tests/regressions/: 91.cpp
